adjusted components and libs and app

--- a/libs/nglib-nonbuildable/src/lib/two/two.component.html
+++ b/libs/nglib-nonbuildable/src/lib/two/two.component.html
@@ -1,1 +1,4 @@
-<p>two works!</p>
+<h1>Hello non buildable lib</h1>
+<p>My name is {{ name }}</p>
+<p>My age is {{ age }}</p>
+<p>I am {{ happy ? 'happy' : 'sad' }}</p>
