--- a/libs/nglib-buildable/src/lib/one/one.component.html
+++ b/libs/nglib-buildable/src/lib/one/one.component.html
@@ -1,1 +1,4 @@
-<p>one works!</p>
+<h1>Hello buildable lib</h1>
+<p>My name is {{ name }}</p>
+<p>My age is {{ age }}</p>
+<p>I am {{ happy ? 'happy' : 'sad' }}</p>
