--- a/apps/nativestorybookapp/src/app/app.component.html
+++ b/apps/nativestorybookapp/src/app/app.component.html
@@ -2,3 +2,4 @@
 <p>My name is {{ name }}</p>
 <p>My age is {{ age }}</p>
 <p>I am {{ happy ? 'happy' : 'sad' }}</p>
+<img src="assets/cat.png" width="200" height="200" alt="malone" />
