updated the settings and options and README

--- a/apps/nativestorybookapp/src/app/app.component.html
+++ b/apps/nativestorybookapp/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>Hello application with native @storybook/angular builder</h1>
+<h1>
+  Hello application with native @storybook/angular builder - This should be blue
+</h1>
 <p>My name is {{ name }}</p>
 <p>My age is {{ age }}</p>
 <p>I am {{ happy ? 'happy' : 'sad' }}</p>
