--- a/apps/ngapp/src/app/app.component.html
+++ b/apps/ngapp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Hello app</h1>
+<h1>Hello app - this should be blue</h1>
 <p>My name is {{ name }}</p>
 <p>My age is {{ age }}</p>
 <p>I am {{ happy ? 'happy' : 'sad' }}</p>
