--- a/libs/nativelib-buildable/src/lib/three/three.component.html
+++ b/libs/nativelib-buildable/src/lib/three/three.component.html
@@ -1,4 +1,7 @@
-<h1>Hello buildable lib with native @storybook/angular builder</h1>
+<h1>
+  Hello buildable lib with native @storybook/angular builder - this should be
+  blue
+</h1>
 <p>My name is {{ name }}</p>
 <p>My age is {{ age }}</p>
 <p>I am {{ happy ? 'happy' : 'sad' }}</p>
