--- a/libs/nglib-buildable/src/lib/one/one.component.html
+++ b/libs/nglib-buildable/src/lib/one/one.component.html
@@ -1,4 +1,4 @@
-<h1>Hello buildable lib</h1>
+<h1>Hello buildable lib - this should be blue</h1>
 <p>My name is {{ name }}</p>
 <p>My age is {{ age }}</p>
 <p>I am {{ happy ? 'happy' : 'sad' }}</p>
